--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header class="header">
       <nav class="navbar">
         <div class="navbar-left">
-          <a href="/index.html"
-            ><img src="/assets/images/logo.png" alt="website logo" />
+          <a href="./index.html"
+            ><img src="./assets/images/logo.png" alt="website logo" />
           </a>
         </div>
         <ul class="navbar-middle">
-          <li><a href="/home">home</a></li>
+          <li><a href="./home">home</a></li>
           <li><a href="#what_we_do">what we do</a></li>
           <li><a href="#about">our team</a></li>
         </ul>
@@ -43,7 +43,7 @@
           Our team of experts and creative professionals will turn your ideas
           into high-end digital products!
         </p>
-        <img src="/assets/images/hero.png" alt="" />
+        <img src="./assets/images/hero.png" alt="" />
         <p class="yellow-text">
           Do you struggle to find a reliable partner for your business? We are
           the partner you have been looking for!
@@ -91,7 +91,7 @@
             <a href="about-marcella.html">
               <img
                 class="card-img"
-                src="/assets/images/Marcella.png"
+                src="./assets/images/Marcella.png"
                 alt="Marcella Weppen"
               />
               <h4>Marcella Weppen</h4>
@@ -123,7 +123,7 @@
           <div class="card">
             <img
               class="card-img"
-              src="/assets/images/Dimi.jpg"
+              src="./assets/images/Dimi.jpg"
               alt="Dmitry Dmitrov"
             />
             <h4>Dmitry Dmitrov</h4>
@@ -138,7 +138,7 @@
           <div class="card">
             <img
               class="card-img"
-              src="/assets/images/Ati.png"
+              src="./assets/images/Ati.png"
               alt="Atefeh Abdolsalami"
             />
             <h4>Ati Abdolsalami</h4>
